<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Dashboard">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="89dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="@string/quick_tips"
            android:textColor="#0B0A0A"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="40dp"
            android:text="@string/scan_your_receipts"
            android:textColor="#F6F3F3" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_budget"
            android:textColor="#EFE0E0" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_alert"
            android:textColor="#EFE0E0"/>
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_expenses"
            android:textColor="#EFE0E0"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="459dp"
        android:layout_height="411dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck,VisualLintBounds">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:paddingStart="75dp"
            android:paddingTop="25dp"
            android:paddingEnd="10dp"
            android:text="@string/dashboard"
            android:textAlignment="inherit"
            android:textColor="#101010"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:paddingStart="10dp"
            android:paddingTop="30dp"
            android:text="@string/recent_expenses"
            android:textAllCaps="true"
            android:textColor="#121111"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview1"
            android:layout_width="427dp"
            android:layout_height="62dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="#EFEAEA"
            app:cardCornerRadius="10dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview2"
            android:layout_width="427dp"
            android:layout_height="62dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="#EFEAEA"
            app:cardCornerRadius="10dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview3"
            android:layout_width="427dp"
            android:layout_height="62dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="#EFEAEA" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="467dp"
        android:layout_height="75dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        android:paddingStart="50dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.991"
        tools:ignore="RtlSymmetry,VisualLintBounds">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="3"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/budget"
            android:hapticFeedbackEnabled="true"
            android:paddingStart="30dp"
            android:scaleType="centerInside"
            android:scaleX="1"
            android:scaleY="1"
            app:srcCompat="@drawable/budget" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="75dp"
            android:layout_height="74dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/report"
            android:hapticFeedbackEnabled="true"
            android:scaleType="centerInside"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:srcCompat="@drawable/report" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="75dp"
            android:layout_height="74dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/home"
            android:hapticFeedbackEnabled="true"
            android:scaleType="centerInside"
            android:scaleX="1.0"
            android:scaleY="1.0"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="75dp"
            android:layout_height="74dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/alert"
            android:hapticFeedbackEnabled="true"
            android:scaleType="centerInside"
            android:scaleX="1.0"
            android:scaleY="1.0"
            app:srcCompat="@drawable/alert" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="75dp"
            android:layout_height="74dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/setting"
            android:hapticFeedbackEnabled="true"
            android:paddingEnd="20dp"
            android:scaleType="centerInside"
            android:scaleX="1.0"
            android:scaleY="1.0"
            app:srcCompat="@drawable/setting" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>